# vala-dbus-binding-tool

./: .gitignore  AUTHORS  CHANGELOG.md  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  meson.build  vala-dbus-binding-tool-1.0.pc.in
debian/: changelog  control  rules  vala-dbus-binding-tool.install
man/: Makefile.am  vala-dbus-binding-tool.1
po/: POTFILES.in
src/: Makefile.am  vala-dbus-binding-tool.vala
vapi/: config.vapi
